# fennec

./: .gitattributes  .gitignore  CHANGES.md  DATAFLOW.md  LICENSE  README.md  dune  dune-project  fennec-buildkit.opam  fennec-cli.opam  fennec-examples.opam  fennec-hunt.opam  fennec-mongo.opam  fennec.opam
buildkit/: dune  fennec_buildkit.ml  fennec_buildkit_stubs.c
buildkit/native/: build.sh  emit_flags.sh
buildkit/native/go/: esbuild_shim.go  go.mod
buildkit/native/rust/: Cargo.toml
buildkit/test/: dune  test_buildkit.ml
cli/: README.md  dev.ml  discover.ml  dune  embed.ml  esbuild_worker.ml  fennec.ml  webroot.ml
cli/dev/: affected.ml  agent_attach.ml  agent_attach.mli  agent_event.ml  agent_event.mli  artifact.ml  artifact.mli  assets.ml  assets.mli  crash_limiter.ml  crash_limiter.mli  dev_tests.ml  dev_tests.mli  diagnostics.ml  diagnostics.mli  discover.ml  discover.mli  dune  dune_watch.ml  dune_watch.mli  mongo_rs.ml  mongo_rs.mli  pidfile.ml  pidfile.mli  port.ml  port.mli  server_proc.ml  server_proc.mli  skill_doc.ml  skill_doc.mli  stublibs.ml  stublibs.mli  supervisor.ml  supervisor.mli  tty.ml  tty.mli  ui.ml  ui.mli  verdict.ml
cli/discovercmd/: discover.ml  discover_model.ml  doc_extract.ml  dune  gen_snapshot.ml  golden.ml  normalize.ml  query.ml  render_json.ml  render_text.ml  retrieve.ml  retrieve.mli  route_facts.ml  select.ml  select.mli  snapshot.ml  snapshot_gen.ml  source_ref.ml
cli/docscmd/: docscmd.ml  docscmd.mli  doctest_gen.ml  dune
cli/test/: dune  test_artifact.ml  test_assets.ml  test_crash_limiter.ml  test_dev_proto.ml  test_diagnostics.ml  test_discover.ml  test_dune_watch.ml  test_instance.ml  test_pidfile.ml  test_pool.ml  test_port.ml  test_reaper.ml  test_report.ml  test_run.ml  test_server_proc.ml  test_suites.ml  test_tty.ml  test_ui.ml
cli/testcmd/: boot.ml  boot.mli  dune  instance.ml  instance.mli  pool.ml  pool.mli  reaper.ml  reaper.mli  report.ml  report.mli  run.ml  run.mli  scaffold.ml  scaffold.mli  suites.ml  suites.mli
examples/helloworld/: README.md  dune  package-lock.json  package.json  server.ml
examples/helloworld/client/: client.mlx  dune
examples/helloworld/public/: hello.txt
examples/helloworld/shared/: app.mlx
examples/helloworld/shared_js/: dune  head.ml
examples/helloworld/shared_native/: dune  head.ml
examples/helloworld/src/: app.js  app.scss
examples/helloworld/test/: hydration.test.mjs
examples/site/: README.md  app.scss  check_lean.ml  dune  package-lock.json  package.json  server.ml
examples/site/admin_client/: dune  main.mlx
examples/site/client/: dune
examples/site/e2e/: cdp.ml  domains.sh  dune  e2e.ml  errors.sh  heal.sh  http_test.ml  livereload.sh  no_leftovers.sh  probe_check.ml  probe_server.ml  realtime_e2e.ml  reclaim.sh  run.ml  run.sh  site.ml  tls_check.ml  tls_server.ml
examples/site/emit/: dune
examples/site/frontend/: dune
examples/site/frontend_build/: README.md
examples/site/frontend_test/: dune  test_components.ml
examples/site/test/: site.test.mjs
examples/site/ui/: admin_router.ml  counter.mlx  page_about.mlx  page_admin.mlx  page_home.mlx  web_router.ml
examples/site/ui_js/: dune
examples/site/ui_native/: dune
examples/site/web_client/: dune  main.mlx
fennec/app/: dune  fennec.ml  fennec.mli
fennec/core/: app.ml  app.mli  cookie.ml  cookie.mli  dev.ml  dev_proto.ml  dev_proto.mli  dune  headers.ml  headers.mli  http.ml  http_date.ml  http_date.mli  http_semantics.ml  http_semantics.mli  middleware.ml  mime.ml  mime.mli  multipart.ml  multipart.mli  ws_channel.ml
fennec/core/test/: dune  test_app.ml  test_cookie.ml  test_headers.ml  (+5 more)
fennec/csr/: dune  head.ml
fennec/ddp/: doc_hash.ml  doc_hash.mli  dune  ejson.ml  ejson.mli  json.ml  json.mli  message.ml  message.mli  session.ml  session.mli  sockjs.ml  sockjs.mli
fennec/e2e/: README.md  backend.ml  chrome.ml  driver.ml  driver.mli  dune  failure.ml  failure.mli  index.mld  pool.ml  reporter.ml  run.ml
fennec/head/: dune  head.ml  head.mli
fennec/hunt/: README.md  backend.ml  backend.mli  cdp.ml  cdp_backend.ml  conformance.ml  driver.ml  driver.mli  dune  expect.ml  expect.mli  failure.ml  failure.mli  fennec_hunt_util.ml  http.ml  http.mli  http_client.ml  http_client.mli  index.mld  live.ml  prop.mli  reporter.mli  run.ml  run.mli  system.ml  system.mli  target.ml  test_proto.ml  test_proto.mli  test_server.ml  test_server.mli  unit.ml  unit.mli
fennec/lib/: dune  fennec.ml
fennec/paw/: assigns.ml  assigns.mli  conn.ml  conn.mli  dune  paw.ml  paw.mli  route.ml
fennec/pulse/: backend.ml  backend.mli  dune  query_key.ml  query_key.mli  reactive.ml  reactive.mli  typed.ml  typed.mli
fennec/pwa/: dune  pwa.ml  pwa.mli
fennec/realtime/: dune  fennec_realtime.ml  fennec_realtime.mli
fennec/router/: dune  matcher.ml
fennec/server/: accounts.ml  accounts.mli  accounts_audit.ml  accounts_audit.mli  accounts_challenge.ml  accounts_challenge.mli  accounts_email.ml  accounts_email.mli  accounts_identity.ml  accounts_identity.mli  accounts_mfa.ml  accounts_mfa.mli  accounts_oauth.ml  accounts_oauth.mli  accounts_oidc.ml  accounts_oidc.mli  accounts_org.ml  accounts_org.mli  accounts_passkey.ml  accounts_passkey.mli  accounts_password.ml  accounts_password.mli  accounts_roles.ml  accounts_roles.mli  accounts_saml.ml  accounts_saml.mli  accounts_scim.ml  accounts_scim.mli  acme.ml  acme.mli  acme_client.ml  basic_auth.ml  basic_auth.mli  cert_store.ml  cert_store.mli  cors.ml  cors.mli  csrf.ml  csrf.mli  deflate.ml  (+47 more)
fennec/ssr/: dune  head.ml
fennec/ui/: dune  page.ml
fennec/unicode_ppx/: dune  fennec_unicode_ppx.ml
hunt/: README.md  backend.ml  backend.mli  chrome.ml  driver.ml  driver.mli  dune  failure.ml  failure.mli  fennec_hunt_util.ml  http.ml  http.mli  index.mld  prop.ml  reporter.ml  reporter.mli  run.ml  run.mli  system.ml  target.ml  test_proto.ml  test_proto.mli
hunt/ppx/: dune
hunt/ppx_rules/: dune
hunt/prop_lib/: dune
hunt/runner/: dune
hunt/test/: dune  test_prop.ml  test_system.ml
hunt/unit_lib/: dune  fennec_hunt_unit.mli
(+501 files in other folders)
