; Compile the native bundler archives for THIS platform:
;   esbuild -> Go c-archive (libfennec_esbuild.a + .h)
;   css/scss -> Rust staticlib (libfennec_css.a)
; Cached on the native/ source tree, so it only re-runs when the shims change.
(rule
 (targets libfennec_esbuild.a libfennec_esbuild.h libfennec_css.a)
 (deps
  (source_tree native))
 (action
  (run bash %{dep:native/build.sh})))

; The exact system libraries this platform must link. Kept as its OWN
; single-target rule (not bundled with the archive rule) so that
; (c_library_flags (:include ...)) resolves it on every dune version.
(rule
 (target link_flags.sexp)
 (action
  (with-stdout-to
   link_flags.sexp
   (run bash %{dep:native/emit_flags.sh}))))

(library
 (name fennec_buildkit)
 (public_name fennec-buildkit)
 (modes native)
 (foreign_stubs
  (language c)
  (names fennec_buildkit_stubs))
 (foreign_archives fennec_esbuild fennec_css)
 (c_library_flags
  (:include link_flags.sexp)))
