; fennec-hunt — the testing package. The fennec hunts for bugs. Two layers:
;
;   Http tests (Fennec_hunt.Http): a typed HTTP/1.1 client + deterministic assertions over
;     any URL (http or https — TLS via tls-eio, accept-any-cert for self-signed/staging).
;     hunt/check blocks, get/post/…, status/body/header/json/cookie assertions.
;     For "does my API return 401?" and "does host routing work?"
;
;   Browser tests (Fennec_hunt.Live + Run): a real Chrome over CDP — hand-written WebSocket
;     + DevTools Protocol, an auto-waiting page DSL, rich failure diagnostics.
;     For "does the counter hydrate?" and "does the page render correctly?"
;
; One package, two independent layers — import what you need. Its OWN opam package
; (fennec-hunt), so production servers depending on `fennec` never link it.
;
; The Browser DSL is written against an abstract page BACKEND, so the DSL/runner are
; unit-tested against an in-memory fake; only the thin Cdp backend touches a real browser.
(library
 (name fennec_hunt)
 (public_name fennec-hunt)
 (libraries eio eio.unix eio_main unix yojson base64 re re.pcre
            tls-eio tls x509 domain-name mirage-crypto-rng.unix fennec-hunt.unit fennec-hunt.prop)
 (private_modules cdp cdp_backend chrome conformance fennec_hunt_util http_client target)
 (inline_tests (backend fennec-hunt.runner))
 (preprocess (pps fennec-hunt.ppx))
 (modes byte native))

; the package landing page for odoc (`dune build @doc`)
(documentation
 (package fennec-hunt)
 (mld_files index))
