; The `fennec dev` supervisor, as a library of small focused modules so the testable logic
; (dune-output parsing, artifact readiness, orphan reaping, asset change classification, the
; restart limiter) is unit-tested in isolation. The CLI `dev` subcommand is a one-line call
; into Supervisor.run.
(library
 (name fennec_dev)
 (libraries unix fennec.core fennec-hunt.unit) ; fennec.core for Dev_proto — the shared CLI<->server wire (Stdlib-only, no Eio bleed)
 (inline_tests (backend fennec-hunt.runner))
 (preprocess (pps fennec-hunt.ppx)))
