; The `fennec dev` supervisor, as a library of small focused modules so the testable logic
; (dune-output parsing, artifact readiness, orphan reaping, asset change classification, the
; restart limiter) is unit-tested in isolation. The CLI `dev` subcommand is a one-line call
; into Supervisor.run.

(library
 (name fennec_dev)
 ; fennec.core for Dev_proto — the shared CLI<->server wire (Stdlib-only, no Eio bleed). The mongo
 ; deps (Mongo_rs: --mongo launches a managed replica set, initiated via the driver) bring Eio +
 ; libmongoc in for the CLI only.
 (libraries
  unix
  digestif
  yojson
  fennec.core
  fennec-hunt.unit
  fennec-mongo.mongod
  fennec-mongo.driver
  eio
  eio_main)
 (inline_tests
  (backend fennec-hunt.runner))
 (preprocess
  (pps fennec-hunt.ppx)))
