; Native task discovery for humans and coding agents. The framework snapshot is
; generated at build time from the checked-in framework/package sources and then
; linked into the CLI, so `fennec discover` stays standalone and fast.

(library
 (name fennec_discover_core)
 (modules
  source_ref
  discover_model
  normalize
  doc_extract
  route_facts
  snapshot
  snapshot_gen
  retrieve
  select
  query
  render_text
  render_json
  golden)
 (libraries ppxlib digestif yojson fennec-hunt.unit)
 (inline_tests
  (backend fennec-hunt.runner))
 (preprocess
  (pps fennec-hunt.ppx)))

(executable
 (name gen_snapshot)
 (modules gen_snapshot)
 (libraries fennec_discover_core))

(rule
 (target snapshot_data.ml)
 (deps
  gen_snapshot.exe
  %{project_root}/dune-project
  (source_tree %{project_root}/fennec)
  (source_tree %{project_root}/hunt)
  (source_tree %{project_root}/mongo)
  (source_tree %{project_root}/examples/site)
  (source_tree %{project_root}/cli/dev)
  (source_tree %{project_root}/cli/docscmd)
  (source_tree %{project_root}/cli/testcmd)
  %{project_root}/cli/fennec.ml)
 (action
  (with-stdout-to
   snapshot_data.ml
   (run ./gen_snapshot.exe %{project_root}))))

(library
 (name fennec_discover)
 (modules discover snapshot_data)
 (libraries fennec_discover_core yojson fennec-hunt.unit)
 (inline_tests
  (backend fennec-hunt.runner))
 (preprocess
  (pps fennec-hunt.ppx)))
