; Unit tests for the fennec_dev library's pure/testable parts. Tests for crash_limiter,
; diagnostics, instance, report, and run moved inline into their source modules.
(tests
 (names test_dune_watch test_artifact test_pidfile test_assets test_tty test_ui test_dev_proto test_port test_server_proc test_discover test_suites test_pool test_reaper)
 (libraries fennec_dev fennec.core fennec_testcmd))
