; The helloworld app — a PLAIN dune project demonstrating the full isomorphic
; loop. `dune build` produces everything; `dune exec ./server.exe` runs it;
; `fennec dev` wraps it with livereload. Nothing here depends on the CLI existing.
;
; Asset pipeline = ordinary dune rules calling the `fennec` binary. Three bundles
; land next to server.exe, which serves them:
;
;   react.js  — the preact runtime (window.React/ReactDOM), built once from the
;               framework's shipped preact_entry.mjs. Never rebuilt by app edits.
;   app.js    — the Melange client (client output + shared_js), bundled with
;               react/* externalized to the globals react.js sets, via the shipped
;               require-shim banner.
;   app.css   — SCSS compiled + minified.

; react runtime: framework's preact entry -> iife bundle exposing the globals.
; Copy the entry into the package dir first so esbuild resolves "preact/*" against
; THIS example's node_modules (esbuild resolves relative to the entry file).
(rule
 (target preact_entry.mjs)
 (action
  (copy %{workspace_root}/fennec/ui/runtime/preact_entry.mjs preact_entry.mjs)))

(rule
 (target react.js)
 (deps
  preact_entry.mjs
  (glob_files_rec node_modules/preact/*))
 (action
  (run %{bin:fennec} build --format iife --out-name react.js -o . preact_entry.mjs)))

; app bundle: melange client output -> one minified iife with react externalized
; to the runtime globals (require-shim banner).
; Depend on the melange.emit @melange alias of client/ so dune builds the WHOLE
; client_output tree (entry + shared_js + melange runtime) BEFORE esbuild bundles
; it. A glob over the output dir does not force the emit to run first.
(rule
 (target app.js)
 (deps
  (alias client/melange)
  (glob_files_rec client/client_output/*)
  %{workspace_root}/fennec/ui/runtime/require_shim.js)
 (action
  (run %{bin:fennec} build --format iife --global-name App --out-name app.js
   --external react --external react-dom --external react/jsx-runtime
   --banner-file %{workspace_root}/fennec/ui/runtime/require_shim.js
   -o .
   client/client_output/examples/helloworld/client/client.js)))

; stylesheet: SCSS -> minified css.
(rule
 (target app.css)
 (deps src/app.scss)
 (action
  (run %{bin:fennec} build --out-name app.css -o . src/app.scss)))

; embed the public/ tree into an OCaml module for prod (single self-contained
; binary). In dev the server reads public/ from disk instead; both go through the
; same Fennec_server.Static path.
(rule
 (target public_assets.ml)
 (deps
  (source_tree public))
 (action
  (run %{bin:fennec} embed public -o public_assets.ml)))

(executable
 (name server)
 (modules server public_assets)
 (libraries fennec.core fennec.server fennec.ui app_native
   server-reason-react.react server-reason-react.reactDom eio eio_main routes unix))

; The isomorphic integration test (test/hydration.test.mjs) is a node script run
; OUTSIDE dune (it needs node + node_modules, which don't belong in dune's
; sandbox): `npm test` in this directory, after `dune build`. CI runs it as a
; dedicated step. It boots the built server and drives the real react.js/app.js
; bundles through jsdom to prove SSR + hydration + interactivity.
