; The helloworld app — a PLAIN dune project demonstrating the full isomorphic
; loop. `dune build` produces everything; `dune exec ./server.exe` runs it;
; `fennec dev` wraps it with livereload. Nothing here depends on the CLI existing.
;
; ASSET MODEL: the web root (webroot/) is ONE tree containing every bundle output
; AND the staged public/ files, served at their paths. Each bundle is its own
; `fennec build` rule (dune is the manifest) writing a file target; one assembly
; rule gathers them + public/ into the (dir webroot) target and emits the prod
; embed module. The server serves webroot/ from disk in dev and the embedded map
; in prod — one Static path either way.

; --- bundles (each its own rule with its own flags + --out-name path) ---

; react runtime: framework's preact entry -> iife bundle exposing the globals.
; Copy the entry into the package dir first so esbuild resolves "preact/*" against
; THIS example's node_modules (esbuild resolves relative to the entry file).
(rule
 (target preact_entry.mjs)
 (action
  (copy %{workspace_root}/fennec/ui/runtime/preact_entry.mjs preact_entry.mjs)))

(rule
 (target react.js)
 (deps
  preact_entry.mjs
  (glob_files_rec node_modules/preact/*))
 (action
  (run %{bin:fennec} build --format iife --out-name react.js -o . preact_entry.mjs)))

; app bundle: melange client output -> one minified iife with react externalized
; to the runtime globals. Depend on the client/melange alias so the whole emit
; tree is built before esbuild bundles it.
(rule
 (target app.js)
 (deps
  (alias client/melange)
  (glob_files_rec client/client_output/*)
  %{workspace_root}/fennec/ui/runtime/require_shim.js)
 (action
  (run %{bin:fennec} build --format iife --global-name App --out-name app.js
   --external react --external react-dom --external react/jsx-runtime
   --banner-file %{workspace_root}/fennec/ui/runtime/require_shim.js
   -o .
   client/client_output/examples/helloworld/client/client.js)))

; stylesheet: SCSS -> minified css.
(rule
 (target app.css)
 (deps src/app.scss)
 (action
  (run %{bin:fennec} build --out-name app.css -o . src/app.scss)))

; --- assemble the web root: bundles + public/, single (dir webroot) target ---
; One fennec call copies the pre-built bundles in (--include, clash-checked),
; stages public/ in (--public, clash-checked vs the bundles), all into webroot/.
(rule
 (targets
  (dir webroot))
 (deps
  react.js
  app.js
  app.css
  (source_tree public))
 (action
  (run %{bin:fennec} build -o webroot --include react.js --include app.js
   --include app.css --public public)))

; --- prod embed module: bake the assembled web root into the binary ---
; Generated from webroot/ so it captures bundles AND public/ in one map.
(rule
 (target webroot_assets.ml)
 (deps webroot)
 (action
  (run %{bin:fennec} build -o webroot --embed webroot_assets.ml)))

(executable
 (name server)
 (modules server webroot_assets)
 (libraries fennec.core fennec.server fennec.ui app_native
   server-reason-react.react server-reason-react.reactDom eio eio_main routes unix))

; The isomorphic integration test (test/hydration.test.mjs) is a node script run
; OUTSIDE dune (it needs node + node_modules, which don't belong in dune's
; sandbox): `npm test` in this directory, after `dune build`. CI runs it as a
; dedicated step. It boots the built server and drives the real react.js/app.js
; bundles through jsdom to prove SSR + hydration + interactivity.
